projects page no longer scrolls sideways on mobile

--- a/scss/_project_cards.scss
+++ b/scss/_project_cards.scss
@@ -1,7 +1,8 @@
 .card-container {
   display: flex;
-  width: 90vw;
+  width: 80vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 .project-cards {
